Add connection string development DB

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TreasureHunt": "Server=145.14.158.43;User ID=awing;Port=3306; Password=Qwer123@123;Database=treasure_hunt_db"
   }
 }
